--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+# Add the following to your site's _config.yml:
 theme: jekyll-theme-architect
+# Optionally, if you'd like to preview your site on your computer, add the following to your site's Gemfile:
+gem "github-pages", group: :jekyll_plugins
+# Architect will respect the following variables, if set in your site's _config.yml:
+title: [The title of your site]
+description: [A short description of your site's purpose]
+# Additionally, you may choose to set the following optional variables:
+show_downloads: ["true" or "false" to indicate whether to provide a download URL]
+google_analytics: [Your Google Analytics tracking ID]
