Update index page

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,11 @@ theme: jekyll-theme-architect
 # Optionally, if you'd like to preview your site on your computer, add the following to your site's Gemfile:
 gem "github-pages", group: :jekyll_plugins
 # Architect will respect the following variables, if set in your site's _config.yml:
-title: Ning Shi
-description: Personal Academic Page
+title: Ning Shi (Shining) 石宁
+description: 
+  Machine Learning Engineer | Learnable, Inc.
+  Applied Data Science Graduate Student | Syracuse University | School of Information Studies
+  Computer Science Graduate Student | Georgia Institute of Technology | College of Computing
 # Additionally, you may choose to set the following optional variables:
 show_downloads: true
 # google_analytics: [Your Google Analytics tracking ID]
