--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ encoding: "utf-8"
 analytics:
   provider: "google-universal" # false (default), "google", "google-universal", "custom"
   google: 
-    tracking_id:
+    tracking_id: "UA-155082049-1"
 
 # Site Author
 author: 
