--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site Settings
 locale: "en-US"
 title: "Ning Shi (石宁)"
-url: https://mrshininnnnn.github.io/
-repository: "MrShininnnnn/MrShininnnnn.github.io"
+url: https://mrshininnnnn.github.io
+repository: "MrShininnnnn/MrShininnnnn.github.io/"
 theme: jekyll-theme-architect
 gem "github-pages", group: :jekyll_plugins
 description: Yo! Welcome to my academic homepage.
