--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ footer_text: >
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: Ning, Shi, Shining, Ning Shi  # add your own keywords or leave empty
 
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+lang: en  # the language of your site (for example: en, fr, cn, ru, etc.)
+icon: ✨  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://mrshininnnnn.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
