--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Ning Shi (Shining) # the website title (if blank, full name will be used instead)
+title: Shining Lab  # the website title (if blank, full name will be used instead)
 first_name: Ning
 middle_name:
 last_name: Shi
